objects/Order.object
<CustomObject>
    <fields>
        <fullName>Actual_Order_Total__c</fullName>
        <description>RSF of Order Product Lines that have been flagged to be included in this total. (Apps, Tax, S&amp;H) Set by WFR on Order Product Creation.</description>
        <inlineHelpText>RSF of Order Product Lines that have been flagged to be included in this total. (Apps, Tax, S&amp;H) Set by WFR on Order Product Creation.</inlineHelpText>
        <label>Actual Order Total</label>
        <summarizedField>OrderItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Include_In_Actual_Order_Total__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alpha_Accessioning_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when one of the Order Product lines is set to Accessioning Status = PASS. Used to trigger Thank You + Survey  email</description>
        <inlineHelpText>Set to true when one of the Order Product lines is set to Accessioning Status = PASS. Used to trigger Thank You + Survey  email</inlineHelpText>
        <label>Alpha Accessioning Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Available_to_Refund__c</fullName>
        <description>A formula that calculates how much money is available to refund for an Order. Factors in any previous refunds.</description>
        <formula>Actual_Order_Total__c -  Total_Amount_Refunded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A formula that calculates how much money is available to refund for an Order. Factors in any previous refunds.</inlineHelpText>
        <label>Amount Available to Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Partner_ID__c</fullName>
        <formula>App_Partner__r.Partner_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner related to the App line on this order. Populated via CreateOrder API.</description>
        <inlineHelpText>Partner related to the App line on this order. Populated via CreateOrder API.</inlineHelpText>
        <label>App Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (App Partner)</relationshipLabel>
        <relationshipName>App_Partner_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>When a Cancellation Order Event is entered, this field captures the date of the request.</description>
        <inlineHelpText>When a Cancellation Order Event is entered, this field captures the date of the request.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Set during a Cancel Order Event to capture the customer&apos;s reasoning for cancelling their order. A required field in the Services Toolbox.</description>
        <inlineHelpText>Set during a Cancel Order Event to capture the customer&apos;s reasoning for cancelling their order. A required field in the Services Toolbox.</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accidental purchase</fullName>
                </value>
                <value>
                    <fullName>No longer want kit</fullName>
                </value>
                <value>
                    <fullName>Complaint with registration process</fullName>
                </value>
                <value>
                    <fullName>Complaint with results</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Sample cannot be sequenced</fullName>
                </value>
                <value>
                    <fullName>Partner Resend</fullName>
                </value>
                <value>
                    <fullName>Privacy concerns</fullName>
                </value>
                <value>
                    <fullName>Accidental multiple order</fullName>
                </value>
                <value>
                    <fullName>Incorrectly charged</fullName>
                </value>
                <value>
                    <fullName>Did not purchase</fullName>
                </value>
                <value>
                    <fullName>LDT Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_BillTo__c</fullName>
        <description>To allow for Company in address</description>
        <inlineHelpText>To allow for Company in address</inlineHelpText>
        <label>Company(BillTo)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ShipTo__c</fullName>
        <description>To allow for Company in address</description>
        <inlineHelpText>To allow for Company in address</inlineHelpText>
        <label>Company(ShipTo)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Helix_Order_Number__c</fullName>
        <description>Helix-specific Order Number generated and passed back to the HMAPI during purchase</description>
        <displayFormat>H{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Helix-specific Order Number generated and passed back to the HMAPI during purchase</inlineHelpText>
        <label>Helix Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Integrate_with_DNAG__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Integrate with DNAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Test__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Must be TRUE for Netsuite integration to proceed. Default value is TRUE for Production. Set to FALSE in Sandbox to prevent picking up unwanted records</description>
        <inlineHelpText>Must be TRUE for Netsuite integration to proceed. Default value is TRUE for Production. Set to FALSE in Sandbox to prevent picking up unwanted records</inlineHelpText>
        <label>Integrate with Netsuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Product_ERP_Status__c</fullName>
        <description>Based on the Kit Order Product Status Number, this formula translates the number to a text string. Transmitted to Netsuite by Boomi.</description>
        <formula>CASE(Kit_Order_Status_Number__c, 1, &quot;Not Transmitted to NetSuite&quot;,2, &quot;Uploaded to DNAG but not Netsuite&quot;,3, &quot;Uploaded to NetSuite but not DNAG&quot;, 4,&quot;Uploaded to NetSuite &amp; DNAG (Submitted)&quot;,5,&quot;Uploaded to NetSuite &amp; DNAG (Shipped)&quot;,6,&quot;Registered: Not Arrived at Lab&quot;,7,&quot;Registered: Arrived at Lab (Inventory Transfer Pending)&quot;,8,&quot;Registered: Arrived at Lab (Inventory Transferred)&quot;,9,&quot;Extraction Underway&quot;,10, &quot;Data Delivered&quot;,&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kit Order Product ERP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Status_Number__c</fullName>
        <description>This formula is used to determine the Status of an Order based on the status of the Kit Order Product. This number rolls up to the Order record, where it is translated into text. Used by the Order Event records to determine if an Order Event record is needed in Netsuite.</description>
        <inlineHelpText>Determines the Status of an Order based on the status of the Kit Order Product. This number rolls up to the Order record, where it is translated into text. Used by the Order Event records to determine if an Order Event record is needed in Netsuite.</inlineHelpText>
        <label>Kit Order Status Number</label>
        <summarizedField>OrderItem.Kit_Order_Status_Number__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Kit_Resend_Reason__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kit_Resends__c</fullName>
        <description>Tallies the total number of resent Kits. Updated automatically by APEX.</description>
        <inlineHelpText>Tallies the total number of resent Kits. Updated automatically upon resends.</inlineHelpText>
        <label>Kit Resends:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kits_On_Order__c</fullName>
        <description>Number of Kits Submitted to Kit Supplier and still in the Order Process - Used for Kit Supplier Integration</description>
        <inlineHelpText>Number of Kits Submitted to Kit Supplier and still in the Order Process - Used for Kit Supplier Integration</inlineHelpText>
        <label>Kits On Order</label>
        <summaryFilterItems>
            <field>OrderItem.Kit_Order_Status__c</field>
            <operation>equals</operation>
            <value>Pending, Fulfillment</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kits_Ready_for_Manifest_Submission__c</fullName>
        <description>RSF that counts number of Kit lines ready for manifest submission on an Order. If Accession = PASS and Sample Status = Ready for Submission the kit line will be included in this rollup</description>
        <inlineHelpText>RSF that counts number of Kit lines ready for manifest submission on an Order. If Accession = PASS and Sample Status = Ready for Submission the kit line will be included in this rollup</inlineHelpText>
        <label>Kits Ready for Manifest Submission</label>
        <summaryFilterItems>
            <field>OrderItem.Accessioning_Status__c</field>
            <operation>equals</operation>
            <value>PASS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.Sample_Status__c</field>
            <operation>equals</operation>
            <value>Ready for Submission</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kits_Ready_for_Submission__c</fullName>
        <description>Count of Kit Order Product Lines Ready for Submission - Used for Kit Supplier Integration</description>
        <inlineHelpText>Count of Kit Order Product Lines Ready for Submission - Used for Kit Supplier Integration</inlineHelpText>
        <label>Kits Ready for Submission</label>
        <summaryFilterItems>
            <field>OrderItem.Kit_Order_Status__c</field>
            <operation>equals</operation>
            <value>Submit</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LDT_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LDT Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_Integration_Retries__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Counter of number of automated NS integration retries attempted 
Only certain specific error messages trigger retries.</description>
        <inlineHelpText>Counter of number of automated NS integration retries attempted 
Only certain specific error messages trigger retries.</inlineHelpText>
        <label>NS Integration Retries</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <description>Calculates a final amount for this product after factoring in Refunds.</description>
        <formula>Actual_Order_Total__c -  Total_Amount_Refunded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates a final amount for this product after factoring in Refunds.</inlineHelpText>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Netsuite_Integration_Error_Detail__c</fullName>
        <description>Captures any available netsuite sales order integration error details.</description>
        <inlineHelpText>Captures any available netsuite sales order integration error details.</inlineHelpText>
        <label>Sales Order Integration Error Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netsuite_Integration_Status__c</fullName>
        <description>Status field to capture state of the Netsuite - Salesforce Sales Order Integration</description>
        <inlineHelpText>Status field to capture state of the Netsuite - Salesforce Sales Order Integration</inlineHelpText>
        <label>Sales Order Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Sales Order Upload</fullName>
                    <default>true</default>
                    <label>Ready for Sales Order Upload</label>
                </value>
                <value>
                    <fullName>Sales Order Upload Successful</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Netsuite_Sales_Order_ID__c</fullName>
        <description>Captures the NS SO internal ID.</description>
        <inlineHelpText>Captures the NS SO internal ID.</inlineHelpText>
        <label>Netsuite Sales Order ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netsuite_Sales_Order_Number__c</fullName>
        <description>TranID supplied by Netsuite</description>
        <inlineHelpText>TranID supplied by Netsuite</inlineHelpText>
        <label>Netsuite Sales Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netsuite_Sales_Order_URL__c</fullName>
        <formula>if( ISBLANK(Netsuite_Sales_Order_ID__c),&quot;&quot;, &quot;https://system.na2.netsuite.com/app/accounting/transactions/salesord.nl?id=&quot;&amp; Netsuite_Sales_Order_ID__c &amp;&quot;&amp;whence=&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Netsuite Sales Order URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Class_del__c</fullName>
        <description>Differentiates between Helix Alpha, Narwhal Alpha, Narwhal Beta, Helix Beta, Commercial or other future variants on Orders</description>
        <inlineHelpText>Differentiates between Helix Alpha, Narwhal Alpha, Narwhal Beta, Helix Beta, Commercial or other future variants on Orders</inlineHelpText>
        <label>Order Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Helix Alpha</fullName>
                </value>
                <value>
                    <fullName>Helix Beta</fullName>
                </value>
                <value>
                    <fullName>Narwhal Alpha</fullName>
                </value>
                <value>
                    <fullName>Narwhal Beta</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that corresponds to the channel this order originated through. Helix Marketplace will pass Partner ID and on Order creation, the corresponding Account with PartnerID will be referenced on the Order record.</description>
        <inlineHelpText>Account that corresponds to the channel this order originated through. Helix Marketplace will pass Partner ID and on Order creation, the corresponding Account with PartnerID will be referenced on the Order record.</inlineHelpText>
        <label>Partner Channel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Channel Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <description>Partner ID for the Partner Channel associated to this Order</description>
        <formula>Partner_Channel__r.Partner_ID__c</formula>
        <inlineHelpText>Partner ID for the Partner Channel associated to this Order</inlineHelpText>
        <label>Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Order_Number__c</fullName>
        <description>Order Number supplied by the Partner.</description>
        <inlineHelpText>Order Number supplied by the Partner.</inlineHelpText>
        <label>Partner Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_affiliated_Customer_ID__c</fullName>
        <description>Customer ID supplied by Channel Partner for this order. Optional field. Carried to Netsuite Sales Order for tracking purposes.</description>
        <inlineHelpText>Customer ID supplied by Channel Partner for this order. Optional field. Carried to Netsuite Sales Order for tracking purposes.</inlineHelpText>
        <label>Partner-affiliated Customer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <description>Captured during the Refund process, a required field if a Refund Order Event is entered from the Services Toolbox.</description>
        <inlineHelpText>Captured during the Refund process, a required field if a Refund Order Event is entered from the Services Toolbox.</inlineHelpText>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accidental purchase</fullName>
                </value>
                <value>
                    <fullName>No longer want kit</fullName>
                </value>
                <value>
                    <fullName>Complaint with registration process</fullName>
                </value>
                <value>
                    <fullName>Complaint with results</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Sample cannot be sequenced</fullName>
                </value>
                <value>
                    <fullName>Privacy concerns</fullName>
                </value>
                <value>
                    <fullName>Accidental multiple order</fullName>
                </value>
                <value>
                    <fullName>Incorrectly charged</fullName>
                </value>
                <value>
                    <fullName>Did not purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who registered the products linked to this Order</description>
        <inlineHelpText>Contact who registered the products linked to this Order</inlineHelpText>
        <label>Registered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders Registered by Contact</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Confirmation_Send_Date__c</fullName>
        <description>Populated by WFR when Shipping Confirmation Sent checkbox is checked</description>
        <inlineHelpText>Populated by WFR when Shipping Confirmation Sent checkbox is checked</inlineHelpText>
        <label>Shipping Confirmation Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipping_Confirmation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated via the UpdateOrder API for Radial orders.</description>
        <inlineHelpText>Updated via the UpdateOrder API for Radial orders.</inlineHelpText>
        <label>Shipping Confirmation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling_Total__c</fullName>
        <description>Captures the total amount of Unit Price from all Order Products of the &quot;S&amp;H&quot; type. Used in calculating Refund amounts.</description>
        <inlineHelpText>Captures the total amount of Unit Price from all Order Products of the &quot;S&amp;H&quot; type. Used in calculating Refund amounts.</inlineHelpText>
        <label>Shipping &amp; Handling Total</label>
        <summarizedField>OrderItem.Shipping_Handling_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Shipping_Handling_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Service_Level__c</fullName>
        <description>Obsolete Field - Remove from production</description>
        <inlineHelpText>Obsolete Field - Remove from production</inlineHelpText>
        <label>Shipping Service Level DELETE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperOrder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Parent Order that this Order is related to.</description>
        <inlineHelpText>Parent Order that this Order is related to.</inlineHelpText>
        <label>SuperOrder</label>
        <referenceTo>SuperOrder__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Doc_ID__c</fullName>
        <description>Tax Doc ID provided by Avalara via HM and passed to NS</description>
        <inlineHelpText>Tax Doc ID provided by Avalara via HM and passed to NS</inlineHelpText>
        <label>Tax Doc ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Refunded__c</fullName>
        <description>Calculates the value of all Refunds from attached Order Event Item records.</description>
        <inlineHelpText>Calculates the value of all Refunds from attached Order Event Item records.</inlineHelpText>
        <label>Total Amount Refunded</label>
        <summarizedField>Order_Event__c.Total_Refund_Amount__c</summarizedField>
        <summaryForeignKey>Order_Event__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_specified_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true by HM, if user has chosen to manually enter an address in vs.using the HM-provided address for this Order.</description>
        <inlineHelpText>Set to true by HM, if user has chosen to manually enter an address in vs.using the HM-provided address for this Order..</inlineHelpText>
        <label>User-specified Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <description>State passed by Helix Marketplace</description>
        <inlineHelpText>State passed by Helix Marketplace</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>KIT</fullName>
                </value>
                <value>
                    <fullName>GIFT</fullName>
                </value>
                <value>
                    <fullName>REDEEMED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>transactionid__c</fullName>
        <description>Transaction ID passed by payment partner to Helix Marketplace and then SFDC</description>
        <inlineHelpText>Transaction ID passed by payment partner to Helix Marketplace and then SFDC</inlineHelpText>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>Helix_Order_Number__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Kits_Ready_for_Submission__c</columns>
        <columns>Kits_On_Order__c</columns>
        <columns>Registered_By__c</columns>
        <columns>ORDERS.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>Today_s_1st_Party_Orders</fullName>
        <columns>SuperOrder__c</columns>
        <columns>Helix_Order_Number__c</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Actual_Order_Total__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>ORDERS.LAST_UPDATE</columns>
        <columns>Netsuite_Integration_Status__c</columns>
        <columns>Netsuite_Integration_Error_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Partner_Channel__c</field>
            <operation>equals</operation>
            <value>Helix</value>
        </filters>
        <label>Today&apos;s 1st Party Orders</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Orders</fullName>
        <columns>SuperOrder__c</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Actual_Order_Total__c</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>Partner_Channel__c</columns>
        <columns>Netsuite_Integration_Error_Detail__c</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>